fix z-index of modal

--- a/src/index.css
+++ b/src/index.css
@@ -57,6 +57,7 @@ e5c454
 }
 
 .Overlay {
+  z-index: 101;
   position: fixed;
   top: 0;
   left: 0;
